k8s/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-and-api-ingress
spec:
  rules:
  - https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microlink-web
            port:
              name: https
      - path: /shorten_url
        pathType: Prefix
        backend:
          service:
            name: microlink-api
            port:
              name: https
      - path: /{short_url_hash}
        pathType: Prefix
        backend:
          service:
            name: microlink-api
            port:
              name: https
